Minor text fixes

--- a/ui/templates/admin/import_spreadsheet.html
+++ b/ui/templates/admin/import_spreadsheet.html
@@ -36,8 +36,10 @@
         {% endfor %}
         <fieldset class="module aligned">
 
-            <p>Make sure that uploaded spreadsheet first row is <strong>not</strong> empty.</p>
+            <p>Make sure that uploaded spreadsheet's first row is <strong>not</strong> empty.</p>
             <p>Supported file types: .xlsx, .xls</p>
+            <p>Processing of uploaded file might take few minutes. After clicking submit, wait patiently for results.</p>
+
         </fieldset>
         <div class="submit-row">
             <input type="submit" value="Submit"/>
