--- a/ui/templates/base.html
+++ b/ui/templates/base.html
@@ -26,6 +26,7 @@
     <script type="text/javascript" src='{% static 'angular-translate-loader-static-files/angular-translate-loader-static-files.js' %}'></script>
     <script type="text/javascript" src='{% static 'angular-translate-storage-cookie/angular-translate-storage-cookie.min.js' %}'></script>
     <script type="text/javascript" src='{% static 'moment/min/moment-with-locales.min.js' %}'></script>
+    <script type="text/javascript" src='{% static 'moment-timezone/builds/moment-timezone-with-data.min.js' %}'></script>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
