- adding new text and translations for ar/en/ur/el/fa - removing search url for searching appointments - removing redundant console.log - removing buttons on #search page

--- a/ui/templates/angular/partials/directives/update-data-info.html
+++ b/ui/templates/angular/partials/directives/update-data-info.html
@@ -1,5 +1,22 @@
 <p class="update-data-info">
-    <span ng-bind-html="translateToHtml('UPDATE_DATA_INFO_1')"></span>
-    <a href="mailto:new.numbers@asylo.gov.gr">new.numbers@asylo.gov.gr</a>
-    <span ng-bind-html="translateToHtml('UPDATE_DATA_INFO_2')"></span>
+    <span ng-bind-html="translateToHtml('SEARCH_INFO_1')"></span>
+    <span ng-bind-html="translateToHtml('SEARCH_INFO_2')"></span>
+    <span ng-bind-html="translateToHtml('SEARCH_INFO_3')"></span>
+    <a href="tel:+302106988538">+302106988538</a>.
+    <span ng-bind-html="translateToHtml('SEARCH_INFO_4')"></span>
+    <a href="https://www.refugee.info/greece/services/?type=11">
+        <span ng-bind-html="translateToHtml('SEARCH_INFO_4_ASYLUM_OFFICE')"></span></a>.
+    <span ng-bind-html="translateToHtml('SEARCH_INFO_5')"></span>
+    <a href="https://www.refugee.info/greece/#pre-reg">
+        <span ng-bind-html="translateToHtml('SEARCH_INFO_5_PRE_REGISTERED')"></span>
+    </a>
+    <span ng-bind-html="translateToHtml('SEARCH_INFO_6')"></span>
+
+    <span ng-bind-html="translateToHtml('SEARCH_INFO_7')"></span>
+    <a href="mailto:new.numbers@asylo.gov.gr">new.numbers@asylo.gov.gr</a>,
+    <span ng-bind-html="translateToHtml('SEARCH_INFO_8')"></span>
+    <span ng-bind-html="translateToHtml('SEARCH_INFO_9')"></span>
+    <span ng-bind-html="translateToHtml('SEARCH_INFO_10')"></span>
+    <a href="https://www.refugee.info/greece/services/?type=5">
+        <span ng-bind-html="translateToHtml('SEARCH_INFO_10_HERE')"></span></a>.
 </p>
